--- a/apresentacao/index.html
+++ b/apresentacao/index.html
@@ -46,7 +46,7 @@
             <a href="https://www.github.com/fernandev-tech" target="_blank">GitHub</a>
         </div>
 
-        <p class="copy">&copy; 2026 — FernaDev Labs</p>
+        <p class="copy">&copy; 2026 — FernaDev</p>
         <p class="author">Fernando B. Sebastião</p>
     </div>
 </footer>
