--- a/apresentacao/index.html
+++ b/apresentacao/index.html
@@ -40,7 +40,7 @@
         <p>📞 Telefone: +244 953 857 801</p>
 
         <div class="social">
-            <a href="https://www.facebook.com/fernandobsebastião" target="_blank">Facebook</a>
+            <a href="https://www.facebook.com/profile.php?id=100090174711865" target="_blank">Facebook</a>
             <a href="#" target="_blank">Instagram</a>
             <a href="#" target="_blank">LinkedIn</a>
             <a href="https://www.github.com/fernandev-tech" target="_blank">GitHub</a>
