--- a/apresentacao/index.html
+++ b/apresentacao/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Apresentando-me</title>
 </head>
 
 <body>
@@ -42,7 +42,7 @@
         <div class="social">
             <a href="https://www.facebook.com/profile.php?id=100090174711865" target="_blank">Facebook</a>
             <a href="#" target="_blank">Instagram</a>
-            <a href="#" target="_blank">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/fernando-b-sebasti%C3%A3o-9284883a2?trk=contact-info" target="_blank">LinkedIn</a>
             <a href="https://www.github.com/fernandev-tech" target="_blank">GitHub</a>
         </div>
 
