--- a/apresentacao/index.html
+++ b/apresentacao/index.html
@@ -46,8 +46,8 @@
             <a href="https://www.github.com/fernandev-tech" target="_blank">GitHub</a>
         </div>
 
-        <p class="copy">&copy; 2026 — FernaDev</p>
-        <p class="author">Fernando B. Sebastião</p>
+        <p class="copy">&copy; 2026 — FernanDev</p>
+        <p class="author">Fernando B Sebastião</p>
     </div>
 </footer>
 
